# PrFinalED25

./: CMakeLists.txt  estrutura das pastas.txt  executar.sh
Bibliotecas/: Estruturas.c  Estruturas.h  MateriaPARVOREAVL.c  MateriaPARVOREAVL.h  MateriasPLD.c  MateriasPLD.h  ProdutosLDE.c  ProdutosLDE.h  main.c
Modulos/: Menu.c
include/: lib.h
libs/: lib.h
src/: main.c
src/modules/: arquivo.c  modules.c  utils.c
src/modulos/: Arquivos.c  Menu.c
